Fix URL field styling in admin
- Remove extra space between the field and the help text
- Increase the space between 'currently' and 'change' lines

--- a/grappelli_safe/static/grappelli/css/forms.css
+++ b/grappelli_safe/static/grappelli/css/forms.css
@@ -165,6 +165,15 @@ input[type=text], input[type=password] {
 }
 
 
+/*  URL .................................................... */
+
+#content p.url {
+    display: inline-block;
+    line-height: 2.4em;
+    margin: 0 0 10px;
+}
+
+
 /*  File ................................................... */
 
 input[type=file] {
